# embedFiglet

./: .gitignore  .gitmodules  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  Doxyfile  FigletFontConvert.rb  README.md  README.rst  README.txt  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  build.bat  embedFiglet.prj  makefile  setup.rb  sub_branches.yaml  test.cc
Figlet.xcodeproj/: project.pbxproj
Figlet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Figlet.xcodeproj/project.xcworkspace/xcuserdata/enrico.xcuserdatad/: UserInterfaceState.xcuserstate
Figlet.xcodeproj/xcshareddata/xcschemes/: FigletLib.xcscheme  example.xcscheme  test.xcscheme
Figlet.xcodeproj/xcuserdata/enrico.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
Headers/: Figlet.hh
Sources/: Figlet.cc  Figlet_Font_small.cc  Font_banner.cc  Font_big.cc  Font_doom.cc  Font_larry3d.cc  Font_mini.cc  Font_script.cc  Font_small.cc  Font_standard.cc  Font_straight.cc
cmake/: CMakeLists-cflags.txt
doc_generate/: C++doc.md  Doxyfile_custom2  LICENSE.md  conf.py
docs/: .buildinfo  C++doc.html  LICENSE.html  Matlab-doc.html  README.html  annotated.html  annotated_dup.js  author.html  classes.html  dir_29076fc14884289da7c17263464a7a67.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  genindex.html  globals.html  globals_defs.html  index.html  index_CPP.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  objects.inv  pages.html  search.html  searchindex.js
docs/_sources/: index.md.txt
docs/_sources/doxygen/html/: _figlet_8hh_source.rst.txt  annotated.rst.txt  annotated_classes.rst.txt  class_figlet_1_1_banner-members.rst.txt  class_figlet_1_1_banner.rst.txt  classes.rst.txt  dir_68267d1309a1af8e8297ef4c3efbcdba.rst.txt  files.rst.txt  framemode.rst.txt  functions.rst.txt  functions_class_members.rst.txt  functions_func.rst.txt  functions_vars.rst.txt  index.rst.txt  namespace_figlet.rst.txt  namespacemembers.rst.txt  namespacemembers_enum.rst.txt  namespacemembers_namespace_members.rst.txt  namespacemembers_vars.rst.txt  namespaces.rst.txt  namespaces_namespaces.rst.txt  pages.rst.txt  printmode.rst.txt  struct_figlet_1_1_font_figlet-members.rst.txt  struct_figlet_1_1_font_figlet.rst.txt
docs/_sources/doxygen2/html/: index.rst.txt
docs/d0/d37/: class_figlet_1_1_banner.html  class_figlet_1_1_banner.js
docs/d1/d4e/: class_figlet_1_1_banner-members.html
docs/d1/dce/: md_extra_2_c_09_09doc.html
docs/d2/d26/: _figlet_8hh.html  _figlet_8hh.js  _figlet_8hh_source.html
docs/d3/de7/: _c_09_09doc_8md.html
docs/d4/d10/: md_extra_2_matlab-doc.html
docs/d4/dc2/: _figlet___font__mini_8cc.html
docs/d5/d4a/: _figlet___font__small_8cc.html
docs/d5/d5f/: _figlet___font__banner_8cc.html
docs/d6/d76/: struct_figlet_1_1_font_figlet-members.html
docs/d6/d82/: namespace_figlet.html  namespace_figlet.js
docs/d8/dde/: _figlet_8cc.html  _figlet_8cc.js
docs/da/d13/: _figlet___font__straight_8cc.html
docs/da/d31/: _matlab-doc_8md.html
docs/db/d24/: _figlet___font__script_8cc.html
docs/db/d3c/: struct_figlet_1_1_font_figlet.html  struct_figlet_1_1_font_figlet.js
docs/dd/d3e/: _figlet___font__standard_8cc.html
docs/dd/dab/: _figlet___font__larry3d_8cc.html
docs/dd/dc1/: framemode.html
docs/de/dfb/: _figlet___font__big_8cc.html
docs/df/d9c/: _figlet___font__doom_8cc.html
docs/df/db8/: printmode.html
docs/doxygen/html/: _figlet_8hh_source.html  annotated.html  annotated_classes.html  class_figlet_1_1_banner-members.html  class_figlet_1_1_banner.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  framemode.html  functions.html  functions_class_members.html  functions_func.html  functions_vars.html  index.html  menudata.js  namespace_figlet.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_namespace_members.html  namespacemembers_vars.html  namespaces.html  namespaces_namespaces.html  pages.html  printmode.html  struct_figlet_1_1_font_figlet-members.html  struct_figlet_1_1_font_figlet.html
docs/doxygen2/html/: index.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  searchdata.js  typedefs_0.js  (+5 more)
docs_build/: Makefile  project_common.py
docs_build/sphinx/: C++doc.rst  Matlab-doc.rst  conf.py  index.rst
doxygen/: Figlet.xcf  Makefile  da_mettere_in_fondo_a_head.html  doxyfile_utils  header.html  logo.css
doxygen/extra/: Matlab-doc.md
examples/: example.cc
matlab/: Figlet.m  README-matlab.md  mex_Figlet.cc  test.m  test1.m
scripts/: FigletFontConvert.rb
src/: Compile.m  Figlet.cc  Figlet.hh  Figlet_Font_banner.cc  Figlet_Font_big.cc  Figlet_Font_doom.cc  Figlet_Font_larry3d.cc  Figlet_Font_mini.cc  Figlet_Font_script.cc  Figlet_Font_small.cc  Figlet_Font_standard.cc  Figlet_Font_straight.cc
src_tests/: example.cc  test1.cc
srcs/: Compile.m  Figlet.cc  Figlet.hh  Figlet_Font_mini.cc  Figlet_Font_straight.cc  mex_Figlet.cc
tests/: test.cc
tests-cpp/: test.cc
toolbox/: CompileFiglet.m  populate_toolbox.rb  setup.m
toolbox/src/: Figlet.cc  Figlet.hh  Figlet_Font_banner.cc  Figlet_Font_big.cc  Figlet_Font_doom.cc  Figlet_Font_larry3d.cc  Figlet_Font_mini.cc  Figlet_Font_script.cc  Figlet_Font_small.cc  Figlet_Font_standard.cc  Figlet_Font_straight.cc
toolbox/tests/: test1.mlx  test2.mlx
